tests/snapshots/run_wpt_conformance__litert_logicalNot_uint8_1D_constant_tensor.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "logical_not.https.any.js",
    "logicalNot uint8 1D constant tensor",
    "litert",
    "PASS",
)
